[gd_scene load_steps=4 format=2]

[ext_resource path="res://fireModeToggleButtonGroup.tres" type="ButtonGroup" id=1]
[ext_resource path="res://scenes/debug.gd" type="Script" id=3]

[sub_resource type="Theme" id=2]

[node name="Control" type="Control"]
margin_right = 223.0
margin_bottom = 185.0
theme = SubResource( 2 )
script = ExtResource( 3 )

[node name="WindowDialog" type="Panel" parent="."]
margin_right = 224.0
margin_bottom = 186.0

[node name="Label" type="Label" parent="WindowDialog"]
margin_left = 10.0
margin_top = 8.0
margin_right = 90.0
margin_bottom = 22.0
text = "Debug Panel"

[node name="normalbtn" type="Button" parent="."]
margin_left = 154.0
margin_top = 132.0
margin_right = 211.0
margin_bottom = 152.0
rect_pivot_offset = Vector2( 33, 10 )
toggle_mode = true
pressed = true
group = ExtResource( 1 )
text = "normal"

[node name="rapidbtn" type="Button" parent="."]
margin_left = 155.0
margin_top = 156.0
margin_right = 209.0
margin_bottom = 176.0
rect_pivot_offset = Vector2( 33, 10 )
toggle_mode = true
group = ExtResource( 1 )
text = "rapid"

[node name="Label" type="Label" parent="."]
margin_left = 141.0
margin_top = 97.0
margin_right = 227.0
margin_bottom = 128.0
text = "set fire 
mode:"
align = 1

[node name="resetbtn" type="Button" parent="."]
margin_left = 7.0
margin_top = 154.0
margin_right = 148.0
margin_bottom = 174.0
text = "reset position"

[connection signal="pressed" from="normalbtn" to="." method="_on_normalbtn_pressed"]
[connection signal="pressed" from="rapidbtn" to="." method="_on_rapidbtn_pressed"]
[connection signal="pressed" from="resetbtn" to="." method="_on_resetbtn_pressed"]
